kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rbc
    helm.sh/chart: rbc-0.3.4
  name: rbc
spec:
  rules:
  - host: rbc.dev
    http:
      paths:
      - backend:
          service:
            name: rbc-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
